--- a/themes/bootstrap3/templates/Recommend/SideFacets/hierarchical-facet-level.phtml
+++ b/themes/bootstrap3/templates/Recommend/SideFacets/hierarchical-facet-level.phtml
@@ -23,13 +23,13 @@
     }
   ?>
   <?php if ($item['children'] ?? false): ?>
-    <li class="facet-tree__parent">
+    <li class="facet__tree__parent">
       <?php
         ++$nodeId;
         $childUlId = 'facet_' . $this->group . '_' . $this->parentNodeId . '_' . $nodeId;
         $buttonAttrs = $this->htmlAttributes(
             [
-                'class' => 'facet-tree__toggle-expanded',
+                'class' => 'facet__tree__toggle-expanded',
                 'aria-expanded' => $item['hasAppliedChildren'] ? 'true' : 'false',
                 'aria-controls' => $childUlId,
                 'aria-label' => $buttonLabel,
@@ -38,10 +38,10 @@
         );
       ?>
       <button<?=$buttonAttrs?>>
-        <?=$this->icon('facet-expand', 'facet-tree__expand')?>
-        <?=$this->icon('facet-collapse', 'facet-tree__collapse')?>
+        <?=$this->icon('facet-expand', 'facet__tree__expand')?>
+        <?=$this->icon('facet-collapse', 'facet__tree__collapse')?>
       </button>
-      <span class="facet-tree__item-container<?=$this->allowExclude ? ' facet-tree__item-container--exclude' : ''?>">
+      <span class="facet__tree__item-container<?=$this->allowExclude ? ' facet__tree__item-container--exclude' : ''?>">
         <?=$renderedEntryHtml?>
       </span>
       <ul id="<?=$this->escapeHtmlAttr($childUlId)?>">
@@ -56,8 +56,8 @@
     </li>
   <?php else: ?>
     <li>
-      <button class="facet-tree__toggle-expanded" disabled aria-label="<?=$this->transEscAttr($buttonLabel)?>"></button>
-      <span class="facet-tree__item-container<?=$this->allowExclude ? ' facet-tree__item-container--exclude' : ''?>">
+      <button class="facet__tree__toggle-expanded" disabled aria-label="<?=$this->transEscAttr($buttonLabel)?>"></button>
+      <span class="facet__tree__item-container<?=$this->allowExclude ? ' facet__tree__item-container--exclude' : ''?>">
         <?=$renderedEntryHtml?>
       </span>
     </li>
