Protect against recommendation errors

--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -73,7 +73,17 @@
         $recommendationJs = <<<JS
             function addRecommendation_$recommendationClass() {
               const recommendationContainer = document.querySelector('#search-sidebar .recommendation_container__$recommendationClass');
+              if (!recommendationContainer) {
+                console.error("Cannot find recommendation container for $recommendationClass");
+                return;
+              }
+
               const recommendation = document.getElementById('recommendation__$recommendationClass');
+              if (!recommendation) {
+                console.error("Cannot find recommendation for $recommendationClass");
+                return;
+              }
+
               recommendationContainer.append(recommendation);
               recommendation.style.display = 'inherit';
             }
