Display side recommendations with combined search (#3135)

--- a/themes/bootstrap3/templates/combined/results.phtml
+++ b/themes/bootstrap3/templates/combined/results.phtml
@@ -73,7 +73,23 @@
       'showBulkOptions' => $this->showBulkOptions,
     ];
   ?>
-  <?=$this->context($this)->renderInContext('combined/stack-' . $placement . '.phtml', $viewParams); ?>
+
+  <?php if (!empty($columnSideRecommendations)): ?>
+    <div class="<?=$this->layoutClass('mainbody')?>">
+      <?=$this->context($this)->renderInContext('combined/stack-' . $placement . '.phtml', $viewParams); ?>
+    </div>
+
+    <div class="<?=$this->layoutClass('sidebar')?>" id="search-sidebar">
+      <?php foreach ($columnSideRecommendations as $columnSideRecommendation): ?>
+        <div class="recommendation_container__<?=$columnSideRecommendation?>">
+          <?php // Content is added via JS in results-list.phtml. ?>
+        </div>
+      <?php endforeach; ?>
+    </div>
+  <?php else: ?>
+    <?=$this->context($this)->renderInContext('combined/stack-' . $placement . '.phtml', $viewParams); ?>
+  <?php endif; ?>
+
   <?php $recs = $combinedResults->getRecommendations('bottom'); ?>
   <?php if (!empty($recs)): ?>
     <div>
