--- a/themes/root/templates/HelpTranslations/pt-br/visualization.phtml
+++ b/themes/root/templates/HelpTranslations/pt-br/visualization.phtml
@@ -4,7 +4,7 @@
 
 <h1>O que isso pode me dizer?</h1>
 
-<p>Este mapa em árvore ajuda você a ver como os livros e outros itens que correspondem à sua busca estão distribuídos em áreas de assunto amplas (conforme indicado pelas primeiras letras dos números de chamada) e os tópicos específicos cobertos pelos itens de cada área.</p> >
+<p>Este mapa em árvore ajuda você a ver como os livros e outros itens que correspondem à sua busca estão distribuídos em áreas de assunto amplas (conforme indicado pelas primeiras letras dos números de chamada) e os tópicos específicos cobertos pelos itens de cada área.</p>
 
 <p>Observe que cada item geralmente possui vários tópicos, portanto o número de tópicos cobertos pelos itens em uma determinada área será maior que o número total de itens nessa área.
 </p>
