--- a/themes/bootstrap3/templates/Recommend/EDSDatabases.phtml
+++ b/themes/bootstrap3/templates/Recommend/EDSDatabases.phtml
@@ -2,11 +2,14 @@
   <?php $databases = $this->recommend->getResults(); ?>
   <?php if (!empty($databases)): ?>
     <h4><?=$this->transEsc('eds_databases')?></h4>
+    <?php if ($this->transEsc('eds_databases_intro', [], '')): ?>
+      <p><?=$this->transEsc('eds_databases_intro')?></p>
+    <?php endif; ?>
     <div class="list-group">
       <?php foreach ($databases as $database): ?>
         <div class="list-group-item">
           <span>
-            <a href="<?=$database->url?>" class="title">
+            <a href="<?=$this->escapeHtmlAttr($database->url)?>" class="title">
               <?=$this->escapeHtml($database->name)?>
             </a>
           </span>
