--- a/themes/bootstrap3/templates/search/facet-list-content.phtml
+++ b/themes/bootstrap3/templates/search/facet-list-content.phtml
@@ -1,20 +1,18 @@
-<ul class="full-facet-list facet__list facet-group<?php if(!$active): ?> hidden<?php endif; ?>" id="facet-list-<?=$this->escapeHtmlAttr($key) ?>">
-  <?php if ($active): ?>
-    <?php if ($this->page > 1 && !$this->inLightbox && !$this->ajaxLightbox): ?>
-      <a href="<?=$this->escapeHtmlAttr($urlBase . '&facetpage=' . ($this->page - 1) . '&facetsort=' . urlencode($this->sort) . '&contains=' . urlencode($this->contains))?>" class="facet js-facet-prev-page" data-page="<?=($this->page + 1) ?>" data-sort="<?=$this->sort ?>" data-limit="<?=count($this->data) ?>"><?=$this->translate('prev_ellipsis') ?></a>
-    <?php endif; ?>
-    <?php foreach ($this->data as $item): ?>
-      <li>
-        <?=$this->render('Recommend/SideFacets/single-facet.phtml', [
-          'exclude' => $this->exclude,
-          'facet' => $item,
-          'group' => $this->facet,
-          'url' => $this->results->getUrlQuery(),
-          'urlBase' => $this->searchAction,
-        ]) ?>
-      </li>
-    <?php endforeach; ?>
+<ul class="full-facet-list facet__list facet-group" id="facet-list-<?=$this->escapeHtmlAttr($key) ?>">
+  <?php if ($this->page > 1 && !$this->inLightbox && !$this->ajaxLightbox): ?>
+    <a href="<?=$this->escapeHtmlAttr($urlBase . '&facetpage=' . ($this->page - 1) . '&facetsort=' . urlencode($this->sort) . '&contains=' . urlencode($this->contains))?>" class="facet js-facet-prev-page" data-page="<?=($this->page + 1) ?>" data-sort="<?=$this->sort ?>" data-limit="<?=count($this->data) ?>"><?=$this->translate('prev_ellipsis') ?></a>
   <?php endif; ?>
+  <?php foreach ($this->data as $item): ?>
+    <li>
+      <?=$this->render('Recommend/SideFacets/single-facet.phtml', [
+        'exclude' => $this->exclude,
+        'facet' => $item,
+        'group' => $this->facet,
+        'url' => $this->results->getUrlQuery(),
+        'urlBase' => $this->searchAction,
+      ]) ?>
+    </li>
+  <?php endforeach; ?>
   <?php if ($this->anotherPage): ?>
     <a href="<?=$this->escapeHtmlAttr($urlBase . '&facet=' . $facet . '&facetpage=' . ($this->page + 1) . '&facetsort=' . urlencode($key) . '&contains=' . urlencode($this->contains))?>" class="facet js-facet-next-page" data-page="<?=($this->page + 1) ?>" data-sort="<?=$this->escapeHtmlAttr($key) ?>" data-lightbox-ignore>
       <span class="text"><?=$this->translate('more_ellipsis') ?></span>
