--- a/themes/bootstrap3/templates/search/facet-list.phtml
+++ b/themes/bootstrap3/templates/search/facet-list.phtml
@@ -31,7 +31,7 @@
     </div>
 
     <?php if (method_exists($this->results->getParams(), 'setFacetContains')): ?>
-      <label class="facet lightbox-filter hidden"><?=$this->transEsc('Filter') ?></label>
+      <label class="facet-lightbox-filter hidden"><?=$this->transEsc('Filter') ?></label>
       <div class="btn-group facet-lightbox-filter hidden">
         <form>
           <input class="ajax_param" data-name="contains" class="form-control" type="text" value="<?=htmlspecialchars($this->contains)?>" aria-label="<?=$this->transEscAttr('search_terms')?>">
