style: php-cs-fixer

--- a/themes/bootstrap3/templates/channels/channelList.phtml
+++ b/themes/bootstrap3/templates/channels/channelList.phtml
@@ -59,9 +59,9 @@
       $channelSplideOptions = [
         'perPage' => 6,
         'breakpoints' => [
-          640 => [ 'perPage' => 3 ]
+          640 => [ 'perPage' => 3 ],
         ],
-        'lazyLoad' => 'nearby'
+        'lazyLoad' => 'nearby',
       ];
     ?>
     <div id="<?=$channelID ?>" class="channel splide"
