Add support banner.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,11 @@
       <a href="{{ site.baseurl }}/support.html">Support</a>
       <a href="https://github.com/vufind-org/vufind" class="hidden-lg">GitHub</a>
     </div>
+    <div class="header-announcement">
+      <p>
+        Love VuFind®? Consider becoming a <a href="https://vufind.org/donate">financial supporter</a>. Your support helps build a better VuFind®!
+      </p>
+    </div>
     <!--
     <div class="header-announcement">
       <p>
