--- a/themes/bootstrap3/templates/myresearch/fines.phtml
+++ b/themes/bootstrap3/templates/myresearch/fines.phtml
@@ -66,7 +66,7 @@
       $columns = array_keys($tableData);
       $rowCount = count($this->fines);
     ?>
-    <table class="table table-striped">
+    <table class="table table-striped fines-table">
       <caption class="sr-only"><?=$this->transEsc('Your Fines')?></caption>
       <thead>
         <tr>
