--- a/themes/root/templates/HelpTranslations/de/blender_advsearch.phtml
+++ b/themes/root/templates/HelpTranslations/de/blender_advsearch.phtml
@@ -8,8 +8,7 @@
        eingeben. Folgende <a href="<?=$this->url('help-home', [], ['query' => ['topic' => 'blender']])?>">Suchoperatoren</a>
        sind erlaubt.</p>
     <p>Jedes Eingabefeld ist mit einem Auswahlmenü versehen, mit welchem Sie das
-       Suchfeld auswählen können (z.B. Titel, Autor). Sie können auch
-       die Suche beliebig kombinieren.</p>
+       Suchfeld auswählen können (z.B. Titel, Autor). Sie können Suchfelder beliebig kombinieren.</p>
     <p>Die Ergebnisse müssen in allen Suchfeldern gefunden werden.</p>
     <p>Mit der Schaltfläche "Suchfeld hinzufügen" können weitere Suchfelder
        hinzugefügt werden. Sie können beliebig viele Suchfelder verwenden.</p>
