--- a/themes/root/templates/HelpTranslations/de/geosearch.phtml
+++ b/themes/root/templates/HelpTranslations/de/geosearch.phtml
@@ -5,14 +5,15 @@
     <h3>Um den Suchbereich zu definieren:</h3>
       <ol>
         <li>Klicken Sie die 'Suchbereich definieren' Schaltfläche.</li>
-        <li>Definieren Sie einen rechteckigen Suchbereich, indem Sie auf die Landkarte klicken und, bei gedrückter Maustaste, den gewünschten Bereich auswählen.</li>
+        <li>Definieren Sie einen rechteckigen Suchbereich, indem Sie auf die Landkarte klicken und bei gedrückter Maustaste
+           den gewünschten Bereich auswählen.</li>
       </ol>
     <h3>Mit den Suchergebnissen arbeiten</h3>
     <p>Die Suchergebnisse werden auf der Karte in Form von Clustern (kreisförmige Symbole mit Zahlen) angezeigt. Die Zahlen stehen für
-        die Anzahl der Datensätze in den einzelnen Clustern. Unter der Kartenansicht wird eine Liste der Ergebnisse angezeigt.</p>
+        die Anzahl der Datensätze im jeweiligen Cluster. Unter der Kartenansicht wird eine Liste der Ergebnisse angezeigt.</p>
     <p>Sie können den Karteausschnitt vergrößern bzw. verkleinern. Hierzu verwenden Sie Zoom-Schaltflächen (+/-) oder Ihre Maus.
         Doppelklick vergrößert den Kartenausschnitt, Umschalt-Taste + Doppelklick verkleinert diesen. Weiterhin können Sie ein Cluster 
-        klicken, um die Ergebnisse zu verfeinern.</p>
+        auswählen, um die Ergebnisse zu verfeinern.</p>
     <p>Die Cluster werden aufgelöst, wenn Sie in die Karte hineinzoomen oder auf einen Cluster klicken. Symbole mit abgerundeten Spitzen sind Punkt-Features.
         Symbole mit quadratischen Oberseiten sind der Mittelpunkt eines definierten Kartenbereichs. Klicken Sie auf das Symbol, um den Titel des Datensatzes, 
         der mit dem Symbol verbunden ist, anzuzeigen. Wenn mehrere Symbole mit demselben Datensatz verbunden sind, werden alle blau hervorgehoben.
