Fix: Whitespace fixes
ensuring there are whitespaces between words :)

--- a/themes/root/templates/HelpTranslations/de/blender.phtml
+++ b/themes/root/templates/HelpTranslations/de/blender.phtml
@@ -15,19 +15,18 @@
   <dd>
     <p>
     Boolesche Operatoren erlauben es, Wörter logisch miteinander zu verknüpfen.
-      Folgende Operatoren sind erlaubt: <strong>AND</strong>, <strong>OR</strong> und <strong>NOT</strong>.
+     Folgende Operatoren sind erlaubt: <strong>AND</strong>, <strong>OR</strong> und <strong>NOT</strong>.
     </p>
     <p>Hinweis: Boolesche Operatoren müssen großgeschrieben werden!</p>
     <dl>
       <dt><a id="boolean_and"></a>AND</dt>
       <dd>
       <p>Die Und-Verknüpfung <strong>(AND)</strong> ist der Standardoperator. Das
-            bedeutet, dass wenn zwischen zwei Wörtern kein Operator gesetzt wird,
-            die Und-Verknüpfung verwendet wird. Wenn Sie zwei Wörter mit AND verbinden,
-            erhalten Sie Treffer, in denen beide Wörter vorhanden sind.
+           bedeutet, dass wenn zwischen zwei Wörtern kein Operator gesetzt wird,
+           die Und-Verknüpfung verwendet wird. Wenn Sie zwei Wörter mit AND verbinden,
+           erhalten Sie Treffer, in denen beide Wörter vorhanden sind.
         </p>
-        <p>Beispiel: Sie suchen nach Titeln, in denen die Wörter
-           "Ökonomie" und "Keynes" enthalten sind:</p>
+        <p>Beispiel: Sie suchen nach Titeln, in denen die Wörter "Ökonomie" und "Keynes" enthalten sind:</p>
         <pre class="code">Ökonomie Keynes</pre>
         <p>oder</p>
         <pre class="code">Ökonomie AND Keynes</pre>
@@ -44,7 +43,7 @@
       <dt><a id="boolean_not"></a>NOT</dt>
       <dd>
         <p>Indem Sie <strong>NOT</strong> vor ein Wort setzen, schließen Sie Treffer aus,
-           die dieses Wort enthalten.</p>
+         die dieses Wort enthalten.</p>
         <p>Beispiel: Sie wollen nach Titeln suchen, welche das Wort "Ökonomie"
            enthalten, aber nicht das Wort "Keynes":</p>
         <pre class="code">Ökonomie NOT Keynes</pre>
