fix: improve readability
already a complex sentence, by removing the bracket it becomes easier to read.

--- a/themes/root/templates/HelpTranslations/de/visualization.phtml
+++ b/themes/root/templates/HelpTranslations/de/visualization.phtml
@@ -6,8 +6,8 @@
 <h1>Was kann ich daraus ablesen?</h1>
 
 <p>Anhand der Baumkarte können Sie sehen, wie sich die Bücher und anderen Einträge, die Ihrer Suche entsprechen,
-      auf die verschiedenen Fachgebiete verteilen (auf der Basis des Anfangsbuchstaben der Signatur) und welche
-      Themen die Einträge in den einzelnen Gebieten behandeln.</p>
+      auf die verschiedenen Fachgebiete verteilen und welche Themen die Einträge in den einzelnen Gebieten behandeln.
+      Fachgebiete werden auf der Basis des Anfangsbuchstaben der Signatur vergeben.</p>
 
 <p>Beachten Sie bitte, dass jeder Eintrag in der Regel mehrere Themen umfasst, so dass die Anzahl der Themen,
       die von den Artikeln in einem bestimmten Bereich abgedeckt werden, größer ist als die Gesamtzahl der Artikel
