--- a/themes/root/templates/HelpTranslations/de/tag.phtml
+++ b/themes/root/templates/HelpTranslations/de/tag.phtml
@@ -2,7 +2,7 @@
 
 <p>
 Ein Tag ist ein (relevantes) Schlagwort oder ein Begriff, der mit einer Information (z.B. einem Artikel) verknüpft wird und
- diese beschreibt. Er ermöglicht eine stichwortbasierte Klassifizierung der Informationen auf die er angewendet wird.
+ diese beschreibt. Er ermöglicht eine stichwortbasierte Klassifizierung der Informationen, auf die er angewendet wird.
 </p>
 
 <p>
