--- a/themes/root/templates/HelpTranslations/de/visualization.phtml
+++ b/themes/root/templates/HelpTranslations/de/visualization.phtml
@@ -1,7 +1,7 @@
-<h1>Was sehen ich hier?</h1>
+<h1>Was sehe ich hier?</h1>
 
 <p>Sie sehen hier eine sogenannte <a href="https://www.cs.umd.edu/hcil/treemap/">Tree Map (Baumkarte)</a>,
-      eine Visualisierungsform, die häufig für Daten mit hierarchichen Kategoriren verwendet wird.</p>
+      eine Visualisierungsform, die häufig für Daten mit hierarchichen Kategorien verwendet wird.</p>
 
 <h1>Was kann ich daraus ablesen?</h1>
 
