--- a/themes/bootstrap3/templates/Recommend/EDSDatabases.phtml
+++ b/themes/bootstrap3/templates/Recommend/EDSDatabases.phtml
@@ -6,12 +6,12 @@
       <p><?=$this->transEsc('eds_databases_intro')?></p>
     <?php endif; ?>
     <div class="list-group">
-      <?php foreach ($databases as $database): ?>
+      <?php foreach ($databases as $name => $database): ?>
         <div class="list-group-item">
           <span>
-            <a href="<?=$this->escapeHtmlAttr($this->proxyUrl($database->url))?>" class="title" target="_blank">
+            <a href="<?=$this->escapeHtmlAttr($this->proxyUrl($database['url']))?>" class="title" target="_blank">
               <?=$this->icon('external-link') ?>
-              <?=$this->escapeHtml($database->name)?>
+              <?=$this->escapeHtml($name)?>
             </a>
           </span>
         </div>
