--- a/themes/bootstrap3/templates/Recommend/CatalogResults.phtml
+++ b/themes/bootstrap3/templates/Recommend/CatalogResults.phtml
@@ -1,9 +1,10 @@
 <?php
   $searchObject = $this->recommend->getResults();
   $results = $searchObject->getResults();
+  $heading = $this->recommend->getCustomHeading() ?? 'Catalog Results';
 ?>
 <?php if (!empty($results)): ?>
-  <h4><?=$this->transEsc('Catalog Results')?></h4>
+  <h4><?=$this->transEsc($heading)?></h4>
   <ul class="list-group">
     <?php foreach ($results as $driver): ?>
       <li class="list-group-item catalog-result">
