--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -96,21 +96,21 @@
       <table class="login-tokens-table table table-striped">
         <thead>
           <tr>
-            <th scope="col" class="login_token_browser"> <?=$this->transEsc('Platform')?> / <?=$this->transEsc('Browser')?></th>
+            <th scope="col" class="login_token_browser"> <?=$this->transEsc('saved_login_platform_and_browser')?></th>
             <th scope="col" class="login_token_last_login"><?=$this->transEsc('Last Login')?>:</th>
-            <th scope="col" class="login_token_delete"><?=$this->transEsc('Delete')?></th>
+            <th scope="col" class="login_token_delete"><?=$this->transEsc('saved_login_actions')?></th>
           </tr>
         </thead>
         <tbody>
-          <?php foreach ($tokens as $token): ?>
+          <?php foreach ($tokens as $i => $token): ?>
             <tr>
-              <th scope="col"><?=$this->transEsc($token->platform)?> / <?=$this->transEsc($token->browser)?></th>
-              <th scope="col"><?=$this->dateTime()->convertToDisplayDateAndTime('Y-m-d H:i:s', $token->last_login)?></th>
+              <th scope="col" id="login_platform_<?=$i?>"><?=$this->transEsc($token->platform)?> / <?=$this->transEsc($token->browser)?></th>
+              <th scope="col" id="login_date_<?=$i?>"><?=$this->dateTime()->convertToDisplayDateAndTime('Y-m-d H:i:s', $token->last_login)?></th>
               <th scope="col">
                 <form id="delete-login-token" method="post" action="<?=$this->url('myresearch-deletelogintoken')?>">
                   <input type="hidden" name="csrf" value="<?=$this->escapeHtmlAttr($this->auth()->getManager()->getCsrfHash())?>">
                   <input type="hidden" name="series" value="<?=$this->escapeHtmlAttr($token->series)?>">
-                  <input id="delete-login-token-submit" class="btn btn-danger" type="submit" name="submit" value="<?=$this->transEscAttr('Forget Login'); ?>">
+                  <input id="delete-login-token-submit" class="btn btn-danger" type="submit" name="submit" value="<?=$this->transEscAttr('Forget Login'); ?>" aria-labelledby="delete-login-token-submit login_platform_<?=$i?> login_date_<?=$i?>">
                 </form>
               </th>
             </tr>
