--- a/themes/bootstrap3/templates/notifications/headerbroadcasts.phtml
+++ b/themes/bootstrap3/templates/notifications/headerbroadcasts.phtml
@@ -2,7 +2,12 @@
   $broadcasts = $this->notifications()->getBroadcasts(true);
 ?>
 <div class="broadcast_wrapper_global">
-  <?php foreach($broadcasts as $broadcast): ?>
-    <span class="broadcast" style="background-color:<?=$broadcast['color_value']?>; border-color:<?=$broadcast['border_color_value']?>;"><?=$broadcast['content']?></span>
+  <?php foreach($broadcasts as $broadcast_id => $broadcast): ?>
+    <span class="broadcast" style="background-color:<?=$broadcast['color_value']?>; border-color:<?=$broadcast['border_color_value']?>;">
+      <a class="close-broadcast" href="#" data-broadcast-id="<?=$broadcast_id?>" title="<?=$this->transEsc('Close for this session')?>">
+        <span class="icon icon--font fa fa-times" aria-label="Close" role="img" aria-hidden="true"></span>
+      </a>
+      <?=$broadcast['content']?>
+    </span>
   <?php endforeach; ?>
 </div>
