Translate searchbox placeholder

--- a/themes/bootstrap3/templates/search/searchbox.phtml
+++ b/themes/bootstrap3/templates/search/searchbox.phtml
@@ -87,7 +87,7 @@
         'aria-label' => $this->translate('search_terms'),
       ];
       if ($placeholder = $this->searchbox()->getPlaceholderText($tabConfig['selected']['id'] ?? $this->searchClassId)) {
-        $searchboxAttributes['placeholder'] = $placeholder;
+        $searchboxAttributes['placeholder'] = $this->translate($placeholder);
       }
       if ($this->searchbox()->autocompleteEnabled($this->searchClassId)) {
         $searchboxAttributes['class'] .= " autocomplete searcher:{$this->searchClassId}"
