--- a/themes/bootstrap3/templates/Recommend/CatalogResults.phtml
+++ b/themes/bootstrap3/templates/Recommend/CatalogResults.phtml
@@ -1,7 +1,7 @@
 <?php
   $searchObject = $this->recommend->getResults();
   $results = $searchObject->getResults();
-  $heading = $this->recommend->getCustomHeading() ?? 'Catalog Results';
+  $heading = $this->recommend->getHeading();
 ?>
 <?php if (!empty($results)): ?>
   <h4><?=$this->transEsc($heading)?></h4>
