--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -117,6 +117,10 @@
           <?php endforeach; ?>
         </tbody>
       </table>
+      <form id="delete-user-login-tokens" method="post" action="<?=$this->url('myresearch-deleteuserlogintokens')?>">
+        <input type="hidden" name="csrf" value="<?=$this->escapeHtmlAttr($this->auth()->getManager()->getCsrfHash())?>">
+        <input id="delete-user-login-tokens-submit" class="btn btn-danger" type="submit" name="submit" value="<?=$this->transEscAttr('Forget All')?>">
+      </form>
     <?php endif; ?>
   <?php endif; ?>
 
